--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <img src="./images/Deconstructed food-bro.svg" alt="" />
               <h2>Choose your favorite food</h2>
             </div>
-            <div class="card second">
+            <div id="second" class="card">
               <img src="./images/Street Food-bro.svg" alt="" />
               <h2>Choose from 1000+ joints</h2>
             </div>
