adding hamburger menu

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
               </ul>
               <button>Login</button>
             </div>
+            <div class="hamburger">
+              <p>🍔</p>
+              <input type="checkbox" name="menu" id="menu" />
+              <div class="mobMenu">
+                <ul>
+                  <li>Home</li>
+                  <li>About us</li>
+                  <li>Services</li>
+                  <li>Blog</li>
+                  <li>Contact us</li>
+                </ul>
+              </div>
+            </div>
           </header>
         </div>
         <div class="middle">
@@ -53,20 +66,22 @@
               We have 5000+ reviews on our customer trust, food and delivery
               service. You can read more about our company.
             </p>
-            <button>
-              <svg
-                width="24"
-                height="24"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="white"
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-              >
-                <path
-                  d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z"
-                />
-              </svg>
-            </button>
+            <div class="whyBestBtns">
+              <button>
+                <svg
+                  width="24"
+                  height="24"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="white"
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                >
+                  <path
+                    d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z"
+                  />
+                </svg>
+              </button>
+            </div>
           </div>
           <div class="cards">
             <div class="card">
